fix: Increase spacing for the bottom margin in css/styles.css.

--- a/css/styles.css
+++ b/css/styles.css
@@ -193,6 +193,11 @@ h2,
   font-size: 0.875rem;
 }
 
+table, table.table {
+    margin-top: .5rem;
+    margin-bottom: 1.5rem;
+}
+
 .quarto-title .quarto-categories .quarto-category {
   padding: 0.25em 0.75em;
   font-size: 0.55em;
